--- a/contato.html
+++ b/contato.html
@@ -24,7 +24,7 @@
                     <li class="nav-item ">
                       <a class="nav-link" href="portfolio.html">Portfolio</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="post.html">Post </a>
                     </li>
                     <li class="nav-item active">
