--- a/portfolio.html
+++ b/portfolio.html
@@ -49,27 +49,49 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="HP3.jpg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>filme 1</h5>
 
+            <div class="row">
+                <div class="col-lg-6">
+                    <h4>Santuário Suíno</h4>
+                    <p>“Quase uma igreja, um culto, uma corrente filosófica. A beleza
+                        e o sabor do porco, em toda a sua extensão, glória e generosidade.
+                        Bem-vindos À Casa do Porco, irmãos eirmãs.Amém!”</p>
+                    <p>– Jefferson Rueda. </p>
+                </div>
+                <div class="col-lg-6">
+                    <img class="w-100 p-3" src="HP1.jpg" alt="Second slide">
+                </div>
             </div>
-          </div>
+        </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="HP2.jpg" alt="Second slide">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>filme 2</h5>
-
+            <div class="row">
+                <div class="col-lg-6">
+                    <h4>Santuário Suíno</h4>
+                    <p>“Quase uma igreja, um culto, uma corrente filosófica. A beleza
+                        e o sabor do porco, em toda a sua extensão, glória e generosidade.
+                        Bem-vindos À Casa do Porco, irmãos eirmãs.Amém!”</p>
+                    <p>– Jefferson Rueda. </p>
+                </div>
+                <div class="col-lg-6">
+                    <img class="w-100 p-3" src="HP2.jpg" alt="Three slide">
+                </div>
             </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row">
+              <div class="col-lg-6">
+                  <h4>Santuário Suíno</h4>
+                  <p>“Quase uma igreja, um culto, uma corrente filosófica. A beleza
+                      e o sabor do porco, em toda a sua extensão, glória e generosidade.
+                      Bem-vindos À Casa do Porco, irmãos eirmãs.Amém!”</p>
+                  <p>– Jefferson Rueda. </p>
+              </div>
+              <div class="col-lg-6">
+                  <img class="w-100 p-3" src="HP2.jpg" alt="tri slide">
+              </div>
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="HP3.jpg" alt="Third slide">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>filme 3</h5>
-
-            </div>
-          </div>
-
+      </div>
+          
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
