post do portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,6 +102,70 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+
+      <div class="container"> 
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <h3>Titulo</h3>
+                <img src="teste.jpg" alt="" class="img-fluid">
+                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
+                        finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
+                        facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
+                        pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
+                        nisl vulputate nam potenti vivamus facilisi per scelerisque nullam hac, mus natoque luctus cubilia dictum primis quisque egestas. Elit justo
+                        bibendum tellus feugiat phasellus ad rhoncus quam mauris class sit nullam placerat, leo duis ornare quis adipiscing et nostra proin cras 
+                        laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
+                        natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
+                        metus sem inceptos habitasse.</p>
+                <button>Leia mais</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container"> 
+  <div class="row">
+      <div class="col-md-8 offset-md-2">
+          <h3>Titulo</h3>
+          <img src="teste.jpg" alt="" class="img-fluid">
+           <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
+                  finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
+                  facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
+                  pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
+                  nisl vulputate nam potenti vivamus facilisi per scelerisque nullam hac, mus natoque luctus cubilia dictum primis quisque egestas. Elit justo
+                  bibendum tellus feugiat phasellus ad rhoncus quam mauris class sit nullam placerat, leo duis ornare quis adipiscing et nostra proin cras 
+                  laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
+                  natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
+                  metus sem inceptos habitasse.</p>
+          <button>Leia mais</button>
+      </div>
+  </div>
+</div>
+</div>
+
+
+<div class="container"> 
+  <div class="row">
+      <div class="col-md-8 offset-md-2">
+          <h3>Titulo</h3>
+          <img src="teste.jpg" alt="" class="img-fluid">
+           <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
+                  finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
+                  facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
+                  pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
+                  nisl vulputate nam potenti vivamus facilisi per scelerisque nullam hac, mus natoque luctus cubilia dictum primis quisque egestas. Elit justo
+                  bibendum tellus feugiat phasellus ad rhoncus quam mauris class sit nullam placerat, leo duis ornare quis adipiscing et nostra proin cras 
+                  laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
+                  natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
+                  metus sem inceptos habitasse.</p>
+          <button>Leia mais</button>
+      </div>
+  </div>
+</div>
+</div>
+
+
+
     </section>
   </main>
   <footer>
