--- a/page.html
+++ b/page.html
@@ -46,6 +46,9 @@
                     </p>
                     <a href="#" class="btnD1">Leia Mais</a>
                 </div>
+                <div class="col-sm-6">
+                    <img  src="fotohome.jpg" alt="">
+                </div>
             </div>
         </div>
     </section>
