--- a/contato.html
+++ b/contato.html
@@ -25,8 +25,8 @@
                       <a class="nav-link" href="portfolio.html">Portfolio</span></a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="post.html">Post </a>
-                    </li>
+                      <a class="nav-link" href="vidadetradutor.html">Vida de Tradutor<span class="sr-only">(current)</a>
+                  </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Contato <span class="sr-only">(current)</a>
                       </li>
