--- a/page.html
+++ b/page.html
@@ -23,8 +23,8 @@
                     <li class="nav-item">
                       <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="post.html">Post</a>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="vidadetradutor.html">Vida de Tradutor<span class="sr-only">(current)</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contato.html">Contato</a> 
