--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="post.html">Post</a>
-            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="vidadetradutor.html">Vida de Tradutor<span class="sr-only">(current)</a>
+          </li>
             <li class="nav-item">
               <a class="nav-link" href="contato.html">Contato</a>
             </li>
