--- a/vidadetradutor.html
+++ b/vidadetradutor.html
@@ -24,8 +24,8 @@
                     <li class="nav-item ">
                       <a class="nav-link" href="portfolio.html">Portfolio</span></a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Post <span class="sr-only">(current)</a>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="vidadetradutor.html">Vida de Tradutor<span class="sr-only">(current)</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contato.html">Contato</a>
