css dos post corrigido

--- a/portfolio.html
+++ b/portfolio.html
@@ -106,9 +106,9 @@
       <div class="container"> 
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <h3>Titulo</h3>
+                <h3 class="title_post">Titulo</h3>
                 <img src="teste.jpg" alt="" class="img-fluid">
-                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
+                 <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
                         finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
                         facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
                         pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
@@ -126,9 +126,9 @@
 <div class="container"> 
   <div class="row">
       <div class="col-md-8 offset-md-2">
-          <h3>Titulo</h3>
+          <h3 class="title_post">Titulo</h3>
           <img src="teste.jpg" alt="" class="img-fluid">
-           <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
+           <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
                   finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
                   facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
                   pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
@@ -147,9 +147,9 @@
 <div class="container"> 
   <div class="row">
       <div class="col-md-8 offset-md-2">
-          <h3>Titulo</h3>
+          <h3 class="title_post">Titulo</h3>
           <img src="teste.jpg" alt="" class="img-fluid">
-           <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
+           <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
                   finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
                   facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
                   pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
