trocar a imagens de posts

--- a/page.html
+++ b/page.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </section>
-    <article class="posts">
+    <article class="posts fundo">
         <div class="container">
             <div class="row">
                 <div class="post-center col-sm-4">
