--- a/vidadetradutor.html
+++ b/vidadetradutor.html
@@ -35,11 +35,59 @@
               </nav>
         </div>
     </header>
-    <main>
-        <section class="banner">
-            <div class="container">
-                
-            </div> 
+    <main class="banner">
+      <div class="container">
+        <h1 class="h1n1  "> Timeline </h1>
+      </div>
+        <section class="timeline">
+          <ul>
+            <li>
+              <div >
+                <time>2018</time> Conheceu joão gordão
+              </div>
+            </li>
+            <li>
+              <div>
+                <time>2017</time> Conheceu joão gordão barrigudo
+              </div>
+            </li>
+            <li>
+              <div>
+                <time>2016</time> Kappa
+              </div>
+            </li>
+            <li>
+              <div>
+                <time>2018</time> Keppo
+              </div>
+            </li>
+            <li>
+              <div>
+                <time>2018</time> Kippo
+              </div>
+            </li>
+            <li>
+              <div>
+                <time>2017</time> Conheceu joão gordão barrigudo
+              </div>
+            </li>
+            <li>
+              <div>
+                <time>2016</time> Kappa
+              </div>
+            </li>
+            <li>
+              <div>
+                <time>2018</time> Keppo
+              </div>
+            </li>
+            <li>
+              <div>
+                <time>2018</time> Kippo
+              </div>
+            </li>
+          </ul>
+            
         </section>
     </main>
     <footer>
@@ -47,5 +95,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+    <script src="teste.js"></script>
+  </body>
 </html>
