--- a/contato.html
+++ b/contato.html
@@ -38,7 +38,66 @@
     <main>
         <section class="banner">
             <div class="container">
-                
+              <section class="Material-contact-section section-padding section-dark">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 wow animated fadeInLeft" data-wow-delay=".2s">
+                            <h1 class="contato-title">Vida de Tradutora.</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 mt-3 contact-widget-section2 wow animated fadeInLeft" data-wow-delay=".2s">
+                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content.</p>
+
+                          <div class="find-widget">
+                            <a class="iconezap" href="whatsapp.png"></a>
+                            Celular:  <a href="#">+55 (11)964463598</a>
+                          </div>
+
+                          <div class="find-widget">
+                            <a class="iconeface" href="https://www.facebook.com/andymagri"></a>
+                             Facebook: <a href="https://www.facebook.com/andymagri">AndyMagri</a>
+                          </div>
+
+                          <div class="find-widget">
+                            <a class="iconeinsta" href="https://www.instagram.com/amanda.magri_tradutora/"></a>
+                            Instagram:  <a href="https://www.instagram.com/amanda.magri_tradutora/">Amanda.magri_tradutora/</a>
+                          </div>
+
+                        </div>
+
+                        <div class="col-md-6 wow animated fadeInRight" data-wow-delay=".2s">
+                            <form class="shake" role="form" method="post" id="contactForm" name="contact-form" data-toggle="validator">
+
+                                <div class="form-group label-floating">
+                                  <label class="control-label" for="name">Nome</label>
+                                  <input class="form-control" id="name" type="text" name="name" required data-error="Please enter your name">
+                                  <div class="help-block with-errors"></div>
+                                </div>
+
+                                <div class="form-group label-floating">
+                                  <label class="control-label" for="email">Email</label>
+                                  <input class="form-control" id="email" type="email" name="email" required data-error="Please enter your Email">
+                                  <div class="help-block with-errors"></div>
+                                </div>
+
+                                <div class="form-group label-floating">
+                                    <label for="message" class="control-label">Mensagem</label>
+                                    <textarea class="form-control" rows="3" id="message" name="message" required data-error="Write your message"></textarea>
+                                    <div class="help-block with-errors"></div>
+                                </div>
+
+                                <div class="form-submit mt-5">
+                                    <button class="btnD2" type="submit" id="form-submit"><i class="material-icons mdi mdi-message-outline"></i> Enviar Mensagem</button>
+                                    <div id="msgSubmit" class="h3 text-center hidden"></div>
+                                    <div class="clearfix"></div>
+                                </div>
+
+                            </form>
+                        </div>
+                    </div>
+                </div>
+              </section>
             </div>
         </section>
     </main>
