--- a/portfolio.html
+++ b/portfolio.html
@@ -117,7 +117,7 @@
                         laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
                         natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
                         metus sem inceptos habitasse.</p>
-                <button>Leia mais</button>
+                     <a href="#" class="btnD2">Leia Mais</a>
             </div>
         </div>
     </div>
@@ -137,7 +137,7 @@
                   laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
                   natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
                   metus sem inceptos habitasse.</p>
-          <button>Leia mais</button>
+              <a href="#" class="btnD2">Leia Mais</a>
       </div>
   </div>
 </div>
@@ -158,7 +158,7 @@
                   laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
                   natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
                   metus sem inceptos habitasse.</p>
-          <button>Leia mais</button>
+            <a href="#" class="btnD2">Leia Mais</a>
       </div>
   </div>
 </div>
