--- a/vidadetradutor.html
+++ b/vidadetradutor.html
@@ -37,7 +37,10 @@
     </header>
     <main class="banner">
       <div class="container">
-        <h1 class="h1n1  "> Timeline </h1>
+        <div >
+          <img src="fotohome.jpg" alt="" class="mx-auto d-block">
+        </div>
+        <h1 class="title"> Timeline </h1>
       </div>
         <section class="timeline">
           <ul>
@@ -48,6 +51,7 @@
             </li>
             <li>
               <div>
+                <img src="fotohome.jpg" alt="" class="timeline-img">
                 <time>2017</time> Conheceu joão gordão barrigudo
               </div>
             </li>
