--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="vidadetradutor.html">Vida de Tradutor<span class="sr-only">(current)</a>
-          </li>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="contato.html">Contato</a>
             </li>
@@ -42,131 +42,98 @@
   <main class="banner">
     <section class="container">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
+
         <div class="carousel-inner">
           <div class="carousel-item active">
 
             <div class="row">
-                <div class="col-lg-6">
-                    <h4>Santuário Suíno</h4>
-                    <p>“Quase uma igreja, um culto, uma corrente filosófica. A beleza
-                        e o sabor do porco, em toda a sua extensão, glória e generosidade.
-                        Bem-vindos À Casa do Porco, irmãos eirmãs.Amém!”</p>
-                    <p>– Jefferson Rueda. </p>
-                </div>
-                <div class="col-lg-6">
-                    <img class="w-100 p-3" src="HP1.jpg" alt="Second slide">
-                </div>
+              <div class="col-lg-6">
+                <h4>Santuário Suíno</h4>
+                <p>“Quase uma igreja, um culto, uma corrente filosófica. A beleza
+                  e o sabor do porco, em toda a sua extensão, glória e generosidade.
+                  Bem-vindos À Casa do Porco, irmãos eirmãs.Amém!”</p>
+                <p>– Jefferson Rueda. </p>
+              </div>
+              <div class="col-lg-6">
+                <img class="w-100 p-3" src="HP1.jpg" alt="Second slide">
+              </div>
             </div>
-        </div>
+          </div>
           <div class="carousel-item">
             <div class="row">
-                <div class="col-lg-6">
-                    <h4>Santuário Suíno</h4>
-                    <p>“Quase uma igreja, um culto, uma corrente filosófica. A beleza
-                        e o sabor do porco, em toda a sua extensão, glória e generosidade.
-                        Bem-vindos À Casa do Porco, irmãos eirmãs.Amém!”</p>
-                    <p>– Jefferson Rueda. </p>
-                </div>
-                <div class="col-lg-6">
-                    <img class="w-100 p-3" src="HP2.jpg" alt="Three slide">
-                </div>
+              <div class="col-lg-6">
+                <h4>Santuário Suíno</h4>
+                <p>“Quase uma igreja, um culto, uma corrente filosófica. A beleza
+                  e o sabor do porco, em toda a sua extensão, glória e generosidade.
+                  Bem-vindos À Casa do Porco, irmãos eirmãs.Amém!”</p>
+                <p>– Jefferson Rueda. </p>
+              </div>
+              <div class="col-lg-6">
+                <img class="w-100 p-3" src="HP2.jpg" alt="Three slide">
+              </div>
             </div>
-        </div>
-        <div class="carousel-item">
-          <div class="row">
-              <div class="col-lg-6">
-                  <h4>Santuário Suíno</h4>
-                  <p>“Quase uma igreja, um culto, uma corrente filosófica. A beleza
-                      e o sabor do porco, em toda a sua extensão, glória e generosidade.
-                      Bem-vindos À Casa do Porco, irmãos eirmãs.Amém!”</p>
-                  <p>– Jefferson Rueda. </p>
-              </div>
-              <div class="col-lg-6">
-                  <img class="w-100 p-3" src="HP2.jpg" alt="tri slide">
-              </div>
           </div>
-      </div>
-          
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-lg-6">
+                <h4>Santuário Suíno</h4>
+                <p>“Quase uma igreja, um culto, uma corrente filosófica. A beleza
+                  e o sabor do porco, em toda a sua extensão, glória e generosidade.
+                  Bem-vindos À Casa do Porco, irmãos eirmãs.Amém!”</p>
+                <p>– Jefferson Rueda. </p>
+              </div>
+              <div class="col-lg-6">
+                <img class="w-100 p-3" src="HP2.jpg" alt="tri slide">
+              </div>
+            </div>
+          </div>
+
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="carousel-control-next-icon " aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
 
-      <div class="container"> 
-        <div class="row">
-            <div class="col-md-8 offset-md-2">
-                <h3 class="title_post">Titulo</h3>
-                <img src="teste.jpg" alt="" class="img-fluid">
-                 <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
-                        finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
-                        facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
-                        pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
-                        nisl vulputate nam potenti vivamus facilisi per scelerisque nullam hac, mus natoque luctus cubilia dictum primis quisque egestas. Elit justo
-                        bibendum tellus feugiat phasellus ad rhoncus quam mauris class sit nullam placerat, leo duis ornare quis adipiscing et nostra proin cras 
-                        laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
-                        natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
-                        metus sem inceptos habitasse.</p>
-                <button>Leia mais</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container"> 
-  <div class="row">
-      <div class="col-md-8 offset-md-2">
-          <h3 class="title_post">Titulo</h3>
-          <img src="teste.jpg" alt="" class="img-fluid">
-           <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
-                  finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
-                  facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
-                  pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
-                  nisl vulputate nam potenti vivamus facilisi per scelerisque nullam hac, mus natoque luctus cubilia dictum primis quisque egestas. Elit justo
-                  bibendum tellus feugiat phasellus ad rhoncus quam mauris class sit nullam placerat, leo duis ornare quis adipiscing et nostra proin cras 
-                  laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
-                  natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
-                  metus sem inceptos habitasse.</p>
-          <button>Leia mais</button>
-      </div>
-  </div>
-</div>
-</div>
-
-
-<div class="container"> 
-  <div class="row">
-      <div class="col-md-8 offset-md-2">
-          <h3 class="title_post">Titulo</h3>
-          <img src="teste.jpg" alt="" class="img-fluid">
-           <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
-                  finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
-                  facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
-                  pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
-                  nisl vulputate nam potenti vivamus facilisi per scelerisque nullam hac, mus natoque luctus cubilia dictum primis quisque egestas. Elit justo
-                  bibendum tellus feugiat phasellus ad rhoncus quam mauris class sit nullam placerat, leo duis ornare quis adipiscing et nostra proin cras 
-                  laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
-                  natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
-                  metus sem inceptos habitasse.</p>
-          <button>Leia mais</button>
-      </div>
-  </div>
-</div>
-</div>
-
-
-
     </section>
+    <article class="postsportifo ">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8">
+            <h3 class="title_post ">Post Hary Potter</h3>
+            <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu
+              efficitur venenatis bibendum
+              finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim
+              velit nisi dui aliquam.</p>
+            <button>Leia mais</button>
+          </div>
+          <div class="col-sm-4">
+            <img src="HP1.jpg " class="imgpost border border-light Small shadow" >
+          </div>
+        </div>
+      </div>
+    </article>
+    <article class="postsportifo ">
+      <div class="container ">
+        <div class="row">
+          <div class="col-sm-4">
+            <img src="HP2.jpg" class="imgpost border border-light Small shadow">
+          </div>
+          <div class="col-sm-8">
+            <h3 class="title_post ">Post Hary Potter</h3>
+            <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu
+              efficitur venenatis bibendum
+              finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim
+              velit nisi dui aliquam.</p>
+            <button>Leia mais</button>
+          </div>
+        </div>
+      </div>
+    </article>
   </main>
   <footer>
   </footer>
