--- a/vidadetradutor.html
+++ b/vidadetradutor.html
@@ -36,8 +36,9 @@
         </div>
     </header>
     <main class="banner">
-      <div class="container">
-        <h1 class="h1n1  "> Timeline </h1>
+      <div class="container ">
+        <img src="fotohome.jpg" alt="" class="imgVDT">
+        <h1 > Linha do Tempo </h1>
       </div>
         <section class="timeline">
           <ul>
