vida de tradutor certo

--- a/vidadetradutor.html
+++ b/vidadetradutor.html
@@ -36,8 +36,8 @@
         </div>
     </header>
     <main class="banner">
-      <div class="container ">
-        <img src="fotohome.jpg" alt="" class="imgVDT">
+      <div class="container titleVDT">
+        <img src="fotohome.jpg" alt="" >
         <h1 > Linha do Tempo </h1>
       </div>
         <section class="timeline">
