Folha post concluida

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,65 +100,40 @@
       </div>
 
     </section>
-    <article class="postsportifo ">
+    <aside class="postsportifo ">
       <div class="container">
         <div class="row">
-            <div class="col-md-8 offset-md-2">
-                <h3 class="title_post">Titulo</h3>
-                <img src="teste.jpg" alt="" class="img-fluid">
-                 <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
-                        finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
-                        facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
-                        pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
-                        nisl vulputate nam potenti vivamus facilisi per scelerisque nullam hac, mus natoque luctus cubilia dictum primis quisque egestas. Elit justo
-                        bibendum tellus feugiat phasellus ad rhoncus quam mauris class sit nullam placerat, leo duis ornare quis adipiscing et nostra proin cras 
-                        laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
-                        natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
-                        metus sem inceptos habitasse.</p>
-                     <a href="#" class="btnD2">Leia Mais</a>
-            </div>
+          <div class="col-sm-8">
+            <h3 class="title_post ">Post Hary Potter</h3>
+            <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu
+              efficitur venenatis bibendum
+              finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim
+              velit nisi dui aliquam.</p>
+            <button>Leia mais</button>
+          </div>
+          <div class="col-sm-4">
+            <img src="HP1.jpg " class="imgpost border border-light Small shadow">
+          </div>
         </div>
-    </div>
-</div>
-
-<div class="container"> 
-  <div class="row">
-      <div class="col-md-8 offset-md-2">
-          <h3 class="title_post">Titulo</h3>
-          <img src="teste.jpg" alt="" class="img-fluid">
-           <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
-                  finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
-                  facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
-                  pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
-                  nisl vulputate nam potenti vivamus facilisi per scelerisque nullam hac, mus natoque luctus cubilia dictum primis quisque egestas. Elit justo
-                  bibendum tellus feugiat phasellus ad rhoncus quam mauris class sit nullam placerat, leo duis ornare quis adipiscing et nostra proin cras 
-                  laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
-                  natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
-                  metus sem inceptos habitasse.</p>
-              <a href="#" class="btnD2">Leia Mais</a>
       </div>
-  </div>
-</div>
-</div>
+    </aside>
+    <aside class="postsportifo ">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <img src="HP1.jpg " class="imgpost border border-light Small shadow">
+          </div>
+          <div class="col-sm-8">
+            <h3 class="title_post ">Post Hary Potter</h3>
+            <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu
+              efficitur venenatis bibendum
+              finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim
+              velit nisi dui aliquam. <button>Leia mais...</button></p>
 
-
-<div class="container"> 
-  <div class="row">
-      <div class="col-md-8 offset-md-2">
-          <h3 class="title_post">Titulo</h3>
-          <img src="teste.jpg" alt="" class="img-fluid">
-           <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu efficitur venenatis bibendum 
-                  finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim velit nisi dui aliquam
-                  facilisi volutpat mus porta lectus rutrum aptent dolor euismod fames ligula, adipiscing non nam rhoncus habitasse orci pellentesque 
-                  pulvinar pretium placerat bibendum feugiat primis vulputate pharetra. Ullamcorper nibh fusce massa lobortis felis nulla mattis ad integer, 
-                  nisl vulputate nam potenti vivamus facilisi per scelerisque nullam hac, mus natoque luctus cubilia dictum primis quisque egestas. Elit justo
-                  bibendum tellus feugiat phasellus ad rhoncus quam mauris class sit nullam placerat, leo duis ornare quis adipiscing et nostra proin cras 
-                  laoreet neque nulla. Blandit molestie sed placerat varius sodales efficitur id, adipiscing sit torquent tempus potenti proin ultrices, 
-                  natoque nulla cras inceptos commodo convallis. Penatibus auctor maximus dignissim a proin, eleifend aptent ad felis hendrerit venenatis,
-                  metus sem inceptos habitasse.</p>
-            <a href="#" class="btnD2">Leia Mais</a>
+          </div>
+        </div>
       </div>
-    </article>
+    </aside>
   </main>
   <footer>
   </footer>
