--- a/contato.html
+++ b/contato.html
@@ -64,6 +64,11 @@
                             Instagram:  <a href="https://www.instagram.com/amanda.magri_tradutora/">Amanda.magri_tradutora/</a>
                           </div>
 
+                          <div class="find-widget">
+                            <a class="iconemail" href="amandamagri.abreu@hotmail.com"></a>
+                            Email:  <a href="">amandamagri.abreu@hotmail.com</a>
+                          </div>
+
                         </div>
 
                         <div class="col-md-6 wow animated fadeInRight" data-wow-delay=".2s">
