Botão Post e logo

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">Logo</a>
+        <a class="navbar-brand mr-sm-12" href="#">AMANDA BATATÃO</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -108,8 +108,7 @@
             <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu
               efficitur venenatis bibendum
               finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim
-              velit nisi dui aliquam.</p>
-            <button>Leia mais</button>
+              velit nisi dui aliquam... <button class="btn btn-outline-danger btn2">  Leia mais</button></p>
           </div>
           <div class="col-sm-4">
             <img src="HP1.jpg " class="imgpost border border-light Small shadow">
@@ -128,7 +127,7 @@
             <p class="text_post">Lorem ipsum dolor sit amet consectetur adipiscing elit mattis, porta arcu
               efficitur venenatis bibendum
               finibus cursus maximus accumsan, iaculis suspendisse dui blandit netus donec nibh. Gravida fusce dignissim
-              velit nisi dui aliquam. <button>Leia mais...</button></p>
+              velit nisi dui aliquam... <button class="btn btn-outline-danger btn2">Leia mais</button></p>
 
           </div>
         </div>
