--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand mr-sm-12" href="#">AMANDA BATATÃO</a>
+        <p class="navbar-brand mr-sm-12" href="#">AMANDA BATATÃO</p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
