--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-  <header>
-    <div class="container">
+  <header class="header">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <p class="navbar-brand mr-sm-12" href="#">AMANDA BATATÃO</p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -25,7 +24,7 @@
             <li class="nav-item ">
               <a class="nav-link" href="page.html">Home</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item active sr-only">
               <a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
@@ -37,7 +36,6 @@
           </ul>
         </div>
       </nav>
-    </div>
   </header>
   <main class="banner">
     <section class="container">
